# cyp-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  conftest.py  docker-compose.yml  environment.yml  go.mod  pyproject.toml  start-alert-receiver.bat  start-dev.bat
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
api/jsonschema/: dashboard-event.schema.json
apps/server/: main.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
cmd/cyp/: flatten.go  flatten_test.go  main.go  main_test.go
cmd/cyp-alert-receiver/: main.go
cmd/cyp-server/: main.go
core/cyp/: __init__.py  cli.py  config.py  console.py  events.py  orchestrator.py
db/migrations/: 001_initial.sql  002_ohlcv_archive.sql  003_llm_usage.sql  004_order_journal.sql
docker/initdb/: 01-init.sql  02-go-runtime.sql  03-token-usage.sql  04-order-journal.sql
docs/: AGENTS.md  ARCHITECTURE.md  GO_OPERATIONS.md  GO_REFACTOR_PLAN.md  GO_ROLLBACK.md  KICKOFF.md  QUANT.md  RISK.md  ROADMAP.md  RUNTIME.md
docs/quant/: README.md  portfolio.md  risk.md  signals_execution.md  sizing.md  stats.md  validation.md
internal/agents/: agents_test.go  analysts.go  base.go  indicators.go  reviewer.go  risk_officer.go  strategist.go
internal/alerts/: alerts.go  alerts_test.go  webhook.go
internal/api/: account_cache.go  account_cache_test.go  dashboard.go  market_history_test.go  operations.go  server.go  server_test.go
internal/app/: application.go  application_test.go
internal/approval/: pending.go  pending_test.go
internal/backtest/: archive.go  archive_test.go  backtest.go  backtest_test.go  optimize.go  optimize_test.go  stats.go  stats_test.go  validation.go  validation_test.go
internal/config/: config.go  config_test.go  load.go
internal/contracts/: api.go  decimal.go  decimal_test.go  events.go  list.go  models.go
internal/control/: state.go  state_test.go  watchlist.go
internal/data/: aggregator.go  aggregator_test.go  archiving.go  archiving_test.go  data_test.go  indicators.go  onchain.go  onchain_test.go  source.go  synthetic.go  volatility.go
internal/events/: bus.go  bus_test.go
internal/llm/: anthropic.go  build.go  client.go  client_test.go  errors.go  http.go  metrics.go  mock.go  openai.go  providers_test.go  types.go
internal/metrics/: metrics.go  metrics_test.go
internal/observability/: logging.go  logging_test.go  metrics.go  tracing.go  (+1 more)
scripts/: okx_account_mode.py  regression.ps1  start-alert-receiver.ps1  start-dev.ps1
tests/: conftest.py  test_agents.py  test_aggregator.py  test_approval_cli.py  test_approval_server.py  test_archive.py  test_backtest.py  test_cex_trading.py  test_data.py  test_live_alerts.py  test_llm.py  test_memory.py  test_observability.py  test_okx.py  test_onchain.py  test_optimize.py  test_orchestrator.py  test_paper_venue.py  test_perp.py  test_policy_gate.py  test_portfolio.py  test_portfolio_risk.py  test_quant_stats.py  test_risk.py  test_risk_measures.py  test_risk_perp.py  test_runtime.py  test_server.py  test_validate.py  test_volatility.py
(+183 files in other folders)
