[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyp-agent"
version = "0.1.1"
description = "半自动加密货币多智能体交易助手（CEX 现货/合约 + 链上 DeFi，人在环，风控优先）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# 核心依赖：零密钥即可跑模拟盘。LLM / 链上按需选装 extras。
dependencies = [
    "ccxt>=4.3",          # 统一 CEX 行情/下单（现货+合约）
    "pandas>=2.2",        # 数据处理
    "pandas-ta>=0.3",     # 技术指标
    "pydantic>=2.7",      # 契约单一来源 + 配置
    "pydantic-settings>=2.3",
    "fastapi>=0.111",     # REST + SSE
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",    # 检查点/状态（WAL，崩溃可恢复）
    "httpx>=0.27",        # 数据源/webhook
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]                       # LLM；缺失则规则降级
onchain = ["web3>=6.20", "eth-account>=0.11"]         # M3 链上执行
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "datamodel-code-generator>=0.25",                 # pydantic -> TS 类型辅助
]

[project.scripts]
cyp = "cyp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["core/cyp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
