[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyp-agent"
version = "0.1.2"
description = "半自动加密货币多智能体交易助手（CEX 现货/合约 + 链上 DeFi，人在环，风控优先）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# 核心依赖：零密钥即可跑模拟盘。LLM / 链上按需选装 extras。
dependencies = [
    "ccxt>=4.3",          # 统一 CEX 行情/下单（现货+合约）
    "pydantic>=2.7",      # 契约单一来源 + 配置
    "pydantic-settings>=2.3",
    "fastapi>=0.111",     # REST + SSE
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",   # PostgreSQL 同步（MemoryStore 检查点/经验）
    "asyncpg>=0.29",          # PostgreSQL 异步（OHLCV 归档，TimescaleDB hypertable）
    "httpx>=0.27",        # 数据源/webhook
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]                       # LLM；缺失则规则降级
onchain = ["web3>=6.20", "eth-account>=0.11"]         # M3 链上执行
data = ["pandas>=2.2", "pyarrow>=16"]                 # M5 真实历史归档 / 向量化回测（按需装）
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",                                     # 静态类型检查（CI 中先设为非阻塞）
    "datamodel-code-generator>=0.25",                 # pydantic -> TS 类型辅助
]

[project.scripts]
cyp = "cyp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["core/cyp"]

[tool.ruff]
line-length = 100
target-version = "py310"   # 与 requires-python 对齐；避免 UP 规则改出 3.11+ 专属语法

[tool.ruff.lint]
# 默认 E4/E7/E9/F 之外：import 排序(I)、语法现代化(UP)、bug 易发点(B)、
# 可简化写法(SIM)、推导式(C4)。E501 行长交给 line-length，不作硬门禁。
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true          # ccxt / pandas_ta 等无类型存根
files = ["core/cyp"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
